@@ -41,38 +41,13 @@ You may want to check out ["Use Curio Directly" in Curio](https://metacpan.org/p
 alternative viewpoint on using Catalyst models when you are
 already using Curio.
 
-# KEYS
-
-There are several ways to handle keys in your Curio models because
-Curio classes can optionally support keys.
-
-## No Keys
-
-A Curio class which does not support keys just means you don't
-set the ["key"](#key) configuration.
-
-## Single Key
-
-If your Curio class does support keys you can choose to create a model
-for each key you want exposed in catalyst by specifying the ["key"](#key)
-configuration in each model for each key you want available in Catalyst.
-Each model would have the same ["class"](#class).
-
-## Multiple Keys
-
-If your Curio class supports keys and you do not set the ["key"](#key)
-configuration then the model will automatically create pseudo
-models for each key.
-
-This is done by appending each declared key to your model name.
-You can see this in the ["SYNOPSIS"](#synopsis) where the model name is
-`Cache` but since ["key"](#key) is not set, and the Curio class does
-have declared keys then the way you get the model is by appending
-`::geo_ip` to the model name, or whatever key you want to access.
-
-# CONFIGURATION
+# CONFIG ARGUMENTS
 
 ## class
+
+```perl
+class => 'MyApp::Service::Cache',
+```
 
 The Curio class that this model wraps around.
 
@@ -81,20 +56,64 @@ and exception when trying to load your model.
 
 ## key
 
+```perl
+key => 'geo_ip',
+```
+
 If your Curio class supports keys then, if set, this forces
 your model to interact with one key only.
 
 ## method
 
-By default when you (per the ["SYNOPSIS"](#synopsis)):
-
-```
-$c->model('Cache::geo_ip')
+```perl
+method => 'connect',
 ```
 
-It will call the `fetch` method on your ["class"](#class) which will
-return a Curio object.  If you'd like, you can change this to
-call a different method, returning something else of your choice.
+By default Catalyst's `model()` will call the `fetch()`
+method on your ["class"](#class) which will return a Curio object.
+If you'd like, you can change this to call a different
+method, returning something else of your choice.
+
+You could, for example, have a method in your Curio class
+which returns the the resource that your Curio object makes:
+
+```perl
+sub connect {
+    my $class = shift;
+    return $class->fetch( @_ )->chi();
+}
+```
+
+Then set the `method` to `connect` causing `model()` to
+return the CHI object instead of the Curio object.
+
+# HANDLING KEYS
+
+There are several ways to handle keys in your Curio models.
+
+## No Keys
+
+A Curio class which does not support keys just means you don't
+set the ["key"](#key) config argument.
+
+## Single Key
+
+If your Curio class does support keys you can choose to create a model
+for each key you want exposed in catalyst by specifying the ["key"](#key)
+config argument in each model for each key you want available in Catalyst.
+Each model would have the same ["class"](#class).
+
+## Multiple Keys
+
+If your Curio class supports keys and you do not set the ["key"](#key)
+config argument then the model will automatically create pseudo
+models for each key.
+
+This is done by appending each declared key to your model name.
+You can see this in the ["SYNOPSIS"](#synopsis) where the model name is
+`Cache` but since ["key"](#key) is not set, and the Curio class does
+have declared keys then the way you get the model is by appending
+`::geo_ip` to the model name, or whatever key you want to access.
 
 # SUPPORT
 
