@@ -2,6 +2,8 @@ Revision history for Perl extension Catalyst-Model-Curio.
 
 {{$NEXT}}
 
+ - Rewrote the "method" config argument documentation.
+
 0.01 2019-05-09T06:55:36Z
 
  - First release.
